[package]
name = "nameful-api-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
axum-serde = { version = "0.9.0", features = ["sonic"] }
magick_rust = "2.0.0"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.20"
