[package]
name = "nameful-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
axum-client-ip = "1.1.3"
base64 = "0.22.1"
image = "0.25.8"
magick_rust = "2.0.0"
maxminddb = "0.26.0"
rand = "0.9.2"
reqwest = "0.12.24"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1", features = ["fs", "rt-multi-thread"] }
tokio-util = "0.7.16"
toml = "0.9.8"
xdg = "3.0.0"
